# mal

./: .gitignore  Makefile
csmal/: csmal.pssln  csmal.sln
csmal/csmal/: Environment.cs  Evaluator.cs  LineEditor.cs  MalExceptions.cs  MalTypes.cs  Printer.cs  Reader.cs  Step0Repl.cs  Step1ReadPrint.cs  Step2Eval.cs  Step3Env.cs  SymbolNotFoundException.cs  csmal.csproj  csmal.psproj  packages.config
csmal/csmal/Properties/: AssemblyInfo.cs
csmal/csmalUnitTests/: Case.cs  CaseChecker.cs  StepTests.cs  TestCaseReader.cs  csmalUnitTests.csproj  csmalUnitTests.csproj~HEAD  csmalUnitTests.psproj  packages.config
csmal/csmalUnitTests/Properties/: AssemblyInfo.cs
gblrust/: Cargo.toml  Makefile
gblrust/src/: lib.rs  reader.rs  readline.rs  types.rs
gclojure/: .gitignore  Makefile  new-tests.sh  project.clj  run  tests.sh
gclojure/src/mal/: env.cljc  printer.cljc  reader.cljc  readline.clj  step0_repl.cljc  step1_read_print.clj  step1_read_print.cljc  step2_eval.cljc  step3_env.cljc  step4_if_fn_do.cljc
grust/: .gitignore  Cargo.toml  Makefile  core.rs  env.rs  new-tests.sh  old-tests.sh  printer.rs  reader.rs  regress-tests.sh  step0_repl.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step5_tco.rs  step6_file.rs  step7_quote.rs  step8_macros.rs  step9_try.rs  tests.sh  types.rs
wolframscript/: mathpass
