[package]
name = "grust"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
rustyline = "5.0.3"
lazy_static = "1.4.0"

regex = "1.0.0"
itertools = "0.7.4"
fnv = "1.0.3"


[[bin]]
name = "step0_repl"
path = "step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "step2_eval.rs"

[[bin]]
name = "step3_env"
path = "step3_env.rs"
